<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.app.mvvmproject.view_models.FeedbackFragmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragments.FeedbackFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/feedback"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18sdp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Your Name*"
            android:maxLength="4"
            android:inputType="textPersonName"
            style="@style/editTextStyle" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:maxLength="4"
            android:inputType="textEmailAddress"
            style="@style/editTextStyle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:hint="@string/feedback_content"
            android:gravity="top|start"
            android:maxLength="4"
            android:inputType="text"
            style="@style/editTextStyle" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:text="@string/submit"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp"
                app:cornerRadius="0dp"/>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>