<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.app.mvvmproject.view_models.ProfileSettingsFragmentViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/profile_settings"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                style="@style/editTextStyle"
                android:layout_margin="0dp"
                android:paddingStart="@dimen/_6sdp"
                android:paddingEnd="@dimen/_6sdp"
                android:background="@drawable/edittext_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="+"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_16sdp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/zxing_transparent"
                    android:hint="91"
                    android:text="91"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>


            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="10"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="@dimen/_4sdp"
                style="@style/editTextStyle" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:text="Send OTP"
                android:onClick="@{viewModel::onSendOtpClicked}"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp"
                app:cornerRadius="0dp"/>

        </androidx.cardview.widget.CardView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otp"
            android:maxLength="4"
            android:inputType="number"
            style="@style/editTextStyle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id_optional"
            android:inputType="textEmailAddress"
            style="@style/editTextStyle" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:text="@string/log_out"
                android:gravity="center"
                android:onClick="@{viewModel::onLogoutClicked}"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp"
                app:cornerRadius="0dp"/>

        </androidx.cardview.widget.CardView>


        <TextView
            style="@style/TitleStyle"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/set_language" />


        <LinearLayout
            android:layout_width="match_parent"
            style="@style/editTextStyle"
            android:padding="0dp"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="center"
            android:paddingStart="0dp"
            android:layout_height="wrap_content">

            <TextView
                style="@style/editTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/english"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:scaleType="fitXY"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_arrow_drop_down"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:gravity="center"
                android:onClick="@{viewModel::onSaveClicked}"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp"
                app:cornerRadius="0dp"/>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>